Imported/merged the posedoc models from the original posedoc repository

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,10 @@
         "ext-openssl": "Enabling the openssl extension allows you to access https URLs for repositories and packages"
     },
     "autoload": {
-        "psr-0": { "Composer": "src/" }
+        "psr-0": {
+            "Composer": "src/",
+            "Posedoc": "src/"
+        }
     },
     "autoload-dev": {
         "psr-0": { "Composer\\Test": "tests/" }
